<resources>
    <string name="app_name">News App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NEWS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="al_jazeera">Al Jazeera</string>
    <string name="bbc">BBC</string>
    <string name="cnn">CNN</string>
    <string name="fox_news">Fox News</string>
    <string name="sky_news">Sky News</string>
    <string name="upcoming">Upcoming</string>
    <string name="new_york_times">New York Times</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ndtv_india">NDTV India</string>
</resources>